Migrated to Symfony 4.2 && Enabled Simple Login Authentication

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,7 @@ $RECYCLE.BIN/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
