--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,9 @@ security:
               check_path: /fundamental/login
               username_parameter: user_login[username]
               password_parameter: user_login[plainPassword]
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthenticator
 
             # activate different ways to authenticate
 
