--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,9 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginAuthenticator
+            logout:
+              path: /fundamental/logout
+              target: /fundamental/login
 
             # activate different ways to authenticate
 
