--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CWS/user",
+    "name": "cws/user",
     "type": "project",
     "license": "GCL",
     "description": "user.cstu.gq",
@@ -19,6 +19,7 @@
         "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
+        "symfony/serializer": "^4.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/templating": "^4.0",
         "symfony/translation": "^4.0",
@@ -35,7 +36,8 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "disable-tls": false
     },
     "autoload": {
         "psr-4": {
