--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,15 +1,16 @@
 framework:
-    secret: '%env(APP_SECRET)%'
-    #default_locale: en
-    #csrf_protection: ~
-    #http_method_override: true
+  secret: '%env(APP_SECRET)%'
+  #default_locale: en
+  #csrf_protection: ~
+  #http_method_override: true
 
-    # uncomment this entire section to enable sessions
-    session:
-        # With this config, PHP's native session handling is used
-        handler_id: ~
+  # uncomment this entire section to enable sessions
+  session:
+    # With this config, PHP's native session handling is used
+    handler_id: ~
+    cookie_domain: '%env(COOKIE_URL)%'
 
-    #esi: ~
-    #fragments: ~
-    php_errors:
-        log: true
+  #esi: ~
+  #fragments: ~
+  php_errors:
+    log: true
