--- a/.env.dist
+++ b/.env.dist
@@ -22,3 +22,9 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> CWS ###
+# The domain the cookies take effect
+# For production environment, change to ".cstu.gq"
+COOKIE_URL="localhost"
+###< CWS ###
